# OrderBookAndItchParser

./: CMakeLists.txt  README.md  compile_commands.json
analysis/: plot_latency_distribution.py  plot_prices.py
benchmark/: bm_ops.cpp  bm_parser.cpp  bm_parser_v1.cpp  bm_parser_v2.cpp
include/: example_benchmark.hpp  example_benchmark_parsing.hpp  heap_level.hpp  itch_parser.hpp  order_book.hpp  order_book_handler_single.hpp  parser.hpp  parser_v1.hpp  parser_v2.hpp
include/benchmarks/: benchmark_utils.hpp  example_benchmark.hpp  example_benchmark_parsing.hpp
src/: main.cpp
